# jaist-recsys-thema

./: MIND_PBS.sh  MIND_normal_retrieval.ipynb  README.md  RPCD_PBS.sh  RPCD_normal_retrieval.ipynb  pyproject.toml
src/MIND/: main.py
src/RPCD/: main.py
src/utils/model/: multi_task_model.py  ranking_model.py  retrieval_model.py
