[tool.poetry]
name = "jaist-recsys-thema"
version = "0.1.0"
description = ""
authors = ["canonrock16 <canonrock0401@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"

# jupyterlab
jupyterlab = "^3.4.5"
jupyterlab-vim = "^0.15.1"
lckr-jupyterlab-variableinspector = "^3.0.9"
jupyterlab-code-formatter = "^1.5.3"
ipywidgets = "^8.0.1"

# lint
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

# tool
fire = "^0.4.0"
tqdm = "^4.64.0"

tensorflow-recommenders = "^0.7.0"
tensorflow-datasets = "^4.6.0"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
